# BreadLang

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  Makefile  README.md  bench.bread  bread  breadlang  build.ps1  build.sh  hello  hello.bread  main.bread  package-lock.json  run_tests.ps1  run_tests.sh  test_array_api  test_methods.bread  todo.txt
breadlang/include/codegen/: codegen.h
breadlang/include/core/: forward_decls.h  function.h  module.h  value.h
breadlang/include/runtime/: builtins.h  memory.h  runtime.h  string_ops.h
breadlang/src/: main.c
breadlang/src/backends/: llvm_backend.c  llvm_backend_codegen.c  llvm_backend_emit.c  llvm_backend_jit.c  llvm_backend_link.c  llvm_backend_utils.c
breadlang/src/codegen/: codegen_expr.c  codegen_helpers.c  codegen_internal.h  codegen_runtime_bridge.c  codegen_scope.c  codegen_semantic.c  codegen_stmt.c  codegen_unboxing.c  optimized_codegen.c
breadlang/src/core/: function.c  module.c  type_descriptor.c  value_class.c  value_core.c  value_dict.c  value_struct.c  var.c
breadlang/src/runtime/: array_utils.c  builtins.c  error.c  memory.c  print.c  runtime.c  value_ops.c
docs/: README.md  breadlang.md  built-in-functions.md  collections.md  control-flow.md  functions.md  getting-started.md  object-oriented.md  types-values.md  variables-constants.md
include/: ast.h  bread_ir.h  bytecode.h  compiler.h  expr.h  function.h  llvm_backend.h  runtime.h  semantic.h  stmt.h  value.h  var.h  vm.h
include/backends/: llvm_backend.h  llvm_backend_codegen.h  llvm_backend_emit.h  llvm_backend_jit.h  llvm_backend_link.h  llvm_backend_utils.h
include/codegen/: codegen.h  codegen_runtime_bridge.h  optimized_codegen.h
include/compiler/: ast.h  compiler.h  escape_analysis.h  expr.h  optimization.h  semantic.h  type_stability.h
include/compiler/analysis/: escape_analysis.h  semantic.h  (+1 more)
include/core/: forward_decls.h  function.h  type_descriptor.h  value.h  var.h
include/ir/: bread_ir.h
include/runtime/: array_utils.h  builtins.h  error.h  memory.h  operators.h  print.h  runtime.h  string_ops.h  value_ops.h
include/vm/: bytecode.h  vm.h
language outline/: 01-ideals.md  02-syntax-and-learning.md  05-commands.md
scripts/: clean.sh  cli_flags_tests.sh  package_macos.cmake  run_llvm_tests.ps1  run_tests.ps1  run_tests.sh  tests.sh
src/: ast.c  bread_ir.c  bytecode.c  compiler.c  expr.c  expr_ops.c  function.c  interpreter.c  llvm_backend.c  main.c  print.c  runtime.c  semantic.c  stmt.c  value.c  var.c  vm.c
src/backends/: llvm_backend.c  llvm_backend_codegen.c  llvm_backend_emit.c  llvm_backend_jit.c  llvm_backend_link.c  llvm_backend_utils.c
src/codegen/: codegen.c  codegen_expr.c  codegen_helpers.c  codegen_internal.h  codegen_runtime_bridge.c  codegen_scope.c  codegen_semantic.c  codegen_stmt.c  codegen_unboxing.c  optimized_codegen.c
src/compiler/: ast.c  compiler.c  escape_analysis.c  expr.c  expr_ops.c  optimization.c  semantic.c  type_stability.c
src/core/: function.c  module.c  type_descriptor.c  value.c  value_array.c  value_class.c  value_core.c  value_optional.c  var.c
src/ir/: bread_ir.c
src/runtime/: array_utils.c  builtins.c  error.c  memory.c  operators.c  print.c  runtime.c  string_ops.c  value_ops.c
src/vm/: bytecode.c  vm.c
tests/: README.md  a.sh  bread_test_runner.c
tests/advanced_types/: test_advanced_types.bread
tests/cli_flags/: dump_ast_simple.expected  trace_use_ast_simple.expected  use_ast_simple.bread
tests/comparisons/: test_comparisons.expected
tests/const/: test_const.bread
tests/control_flow_if_else/: test_control_flow_if_else.bread
tests/control_flow_while/: test_control_flow_while.bread
tests/ctest/: arrays_dicts_and_indexing.bread  arrays_dicts_and_indexing.expected  basic_print.bread  basic_print.expected  classes.bread  classes.expected  collection_equality.bread  comprehensive.bread  comprehensive.expected  control_flow.bread  control_flow.expected  import_default_export.bread  import_default_export_module.bread  inheritance_dispatch.bread  inheritance_dispatch.expected  stress.bread  stress.expected  string_interpolation  string_interpolation.bread  string_interpolation.expected  string_operations.bread  string_operations.expected  summary.bread  summary.expected  type_mismatch_demo.bread  variables_and_assignment.bread  variables_and_assignment.expected
tests/functions_basic/: test_functions_basic.bread
tests/integration/: advanced_control.bread  advanced_control.expected  advanced_functions.bread  advanced_functions.expected  arrays.bread  comparisons.bread  complex_data_structures.bread  complex_data_structures.expected  complex_expressions.bread  complex_expressions.expected  dictionaries.bread  edge_cases.bread  edge_cases.expected  error_handling.bread  flow.bread  func.bread  math.bread  math.expected  memory_management.bread  memory_management.expected  run_test.c  strings.bread  strings.expected  types.bread  types.expected  vars.bread
tests/llvm_backend/: array_manipulation.bread  array_manipulation.expected  basic.bread  builtin_functions.bread  builtin_functions.expected  constant_folding.bread  constant_folding.expected  control.bread  error_handling.bread  error_handling.expected  ir_generation.bread  ir_generation.expected  jit.bread  optimizations.bread  optimizations.expected  performance.bread  performance.expected  stress_test.bread  stress_test.expected  type_system.bread  type_system.expected
tests/logical/: test_logical.bread  test_logical.expected
tests/print_expr/: test_print_expr.bread
tests/property/: Makefile  README.md  array_properties  builtin_properties  builtin_properties.c  control_properties  control_properties.c  error_properties  error_properties.c  memory_properties  parser_properties  parser_properties.c  pbt_framework.c  string_properties  string_properties.c  type_properties  type_properties.c
tests/small_project_breadquest/: test_small_project_breadquest.expected
tests/string_concat/: test_string_concat.bread
tests/types/: test_types.expected
tests/unknown_var/: test_unknown_var.bread
(+93 files in other folders)
